--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
-            <h2 class="section-title animate-content">About Me</h2>
+            <div class="title-wrapper">
+                <h2 class="section-title animate-content">About Me</h2>
+            </div>
             <div class="about-content">
                 <div class="about-text animate-content">
                     <p>I'm a passionate professional with expertise in [Your Field]. With [X] years of experience, I specialize in [Your Skills]. My journey in [Your Industry] has been driven by my curiosity and dedication to excellence.</p>
